--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,15 +5,22 @@
     android:id="@+id/loginFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".ui.fragments.Login">
 
     <EditText
         android:id="@+id/editTextEmailAddress"
         android:layout_width="265dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="216dp"
+        android:layout_height="106dp"
+        android:layout_marginTop="224dp"
         android:ems="10"
+        android:hint="email"
         android:inputType="textEmailAddress"
+        android:shadowColor="#8F1616"
+        android:textAlignment="center"
+        android:textColor="#F8F6F6"
+        android:textColorHint="#D3D1D1"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,9 +28,13 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="265dp"
-        android:layout_height="90dp"
+        android:layout_height="111dp"
         android:ems="10"
+        android:hint="password"
         android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +48,8 @@
         android:layout_marginTop="20dp"
         android:text="Forgot Password?"
         android:textAlignment="center"
+        android:textColor="#F4EFEF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +62,8 @@
         android:layout_marginTop="20dp"
         android:text="Need Account?"
         android:textAlignment="center"
+        android:textColor="#F6F2F2"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,4 +79,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="192dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/techbooklogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
