--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".ui.fragments.Splash">
 
     <Button
@@ -20,23 +21,23 @@
 
     <Button
         android:id="@+id/register_button_splash"
-        android:layout_width="119dp"
+        android:layout_width="124dp"
         android:layout_height="53dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="64dp"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button_splash" />
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="165dp"
-        android:layout_height="155dp"
-        android:layout_marginTop="216dp"
-        android:src="@android:drawable/btn_star_big_on"
+        android:id="@+id/imageView2"
+        android:layout_width="264dp"
+        android:layout_height="266dp"
+        android:src="@drawable/techbooklogo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="81dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
