--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,6 @@
         android:ems="10"
         android:hint="email"
         android:inputType="textEmailAddress"
-        android:shadowColor="#8F1616"
         android:textAlignment="center"
         android:textColor="#F8F6F6"
         android:textColorHint="#D3D1D1"
@@ -33,8 +32,10 @@
         android:hint="password"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#F8F6F6"
+        android:textColorHint="#D3D1D1"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +82,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/logo"
         android:layout_width="192dp"
         android:layout_height="179dp"
         android:layout_marginTop="16dp"
