created login functions for firestore and authentication. Able to pull previously logged in user from the firestore database

--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_login_to_homepage"
             app:destination="@id/homepage" />
+        <action
+            android:id="@+id/action_login_to_profile2"
+            app:destination="@id/profile2" />
     </fragment>
     <fragment
         android:id="@+id/register"
