--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,7 +24,7 @@ card_view:contentPadding="10dp">
     <TextView
         android:id="@+id/txt"
         android:textSize="22sp"
-        android:text="@string/title"
+        android:text="@string/Event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -33,7 +33,7 @@ card_view:contentPadding="10dp">
     <TextView
         android:id="@+id/sub_txt"
         android:textSize="18sp"
-        android:text="@string/title"
+        android:text="@string/Location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="italic"
