updated events_list_fragment.xml, EventsList.kt

--- a/app/src/main/res/layout/events_list_fragment.xml
+++ b/app/src/main/res/layout/events_list_fragment.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.fragments.EventsList">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcyview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
