--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -60,5 +60,28 @@
         <argument
             android:name="userName"
             app:argType="string"/>
+        <action
+            android:id="@+id/action_profile2_to_eventsList"
+            app:destination="@id/eventsList" />
     </fragment>
+    <fragment
+        android:id="@+id/eventsList"
+        android:name="com.latifah.techbook.ui.fragments.EventsList"
+        android:label="events_list_fragment"
+        tools:layout="@layout/events_list_fragment" >
+        <action
+            android:id="@+id/action_eventsList_to_events"
+            app:destination="@id/events" />
+        <argument
+            android:name="eventname"
+            app:argType="string" />
+        <argument
+            android:name="location"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/events"
+        android:name="com.latifah.techbook.ui.fragments.Events"
+        android:label="fragment_events"
+        tools:layout="@layout/fragment_events" />
 </navigation>
