--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+
 <androidx.cardview.widget.CardView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:card_view="http://schemas.android.com/apk/res-auto"
-android:orientation="vertical"
-android:foreground="?android:attr/selectableItemBackground"
-android:clickable="true"
-android:focusable="true"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-card_view:cardUseCompatPadding="true"
-card_view:cardElevation="5dp"
-card_view:contentPadding="10dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardview"
+    android:orientation="vertical"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="5dp"
+    card_view:contentPadding="10dp">
 
 
 <RelativeLayout android:layout_width="match_parent"
