--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -12,22 +12,23 @@
         android:layout_width="289dp"
         android:layout_height="57dp"
         android:layout_marginTop="100dp"
-        android:text="event_title"
+        android:text="@string/event_title"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/event_location"
         android:layout_width="289dp"
         android:layout_height="57dp"
-        android:layout_marginTop="100dp"
-        android:text="event_title"
+        android:text="@string/Location"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
