--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -3,13 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_navigation.xml"
-    app:startDestination="@id/dashboard">
+    app:startDestination="@id/profile">
 
     <fragment
-        android:id="@+id/dashboard"
-        android:name="com.latifah.techbook.ui.fragments.Dashboard"
-        android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/profile"
+        android:name="com.latifah.techbook.ui.fragments.Profile"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile">
+    <argument
+        android:name="firstName"
+        app:argType="string"/>
+    <argument
+        android:name="lastName"
+        app:argType="string"/>
+    <argument
+        android:name="userName"
+        app:argType="string"/>
+    </fragment>
+
     <fragment
         android:id="@+id/events"
         android:name="com.latifah.techbook.ui.fragments.Events"
@@ -20,14 +31,15 @@
         android:name="com.latifah.techbook.ui.fragments.Likes"
         android:label="fragment_likes"
         tools:layout="@layout/fragment_likes" />
-    <fragment
-        android:id="@+id/profile"
-        android:name="com.latifah.techbook.ui.fragments.Profile"
-        android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+
     <fragment
         android:id="@+id/newPost"
         android:name="com.latifah.techbook.ui.fragments.NewPost"
         android:label="fragment_new_post"
         tools:layout="@layout/fragment_new_post" />
+    <fragment
+        android:id="@+id/dashboard"
+        android:name="com.latifah.techbook.ui.fragments.Dashboard"
+        android:label="fragment_dashboard"
+        tools:layout="@layout/fragment_dashboard" />
 </navigation>
