--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,16 +2,28 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="4dp">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="4dp"
+    android:orientation="vertical"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="5dp"
+    card_view:contentPadding="10dp">
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imagV"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/todo"
             android:src="@drawable/ic_person_icon" />
@@ -27,7 +39,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/con_subtxt_"
+            android:id="@+id/con_subtxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/email"
