--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -63,15 +63,20 @@
         <action
             android:id="@+id/action_profile2_to_eventsList"
             app:destination="@id/eventsList" />
+        <action
+            android:id="@+id/action_profile2_to_contactFragment"
+            app:destination="@id/contactFragment" />
     </fragment>
     <fragment
         android:id="@+id/eventsList"
         android:name="com.latifah.techbook.ui.fragments.EventsList"
-        android:label="events_list_fragment"
+        android:label="Near Me"
         tools:layout="@layout/events_list_fragment" >
         <action
             android:id="@+id/action_eventsList_to_events"
-            app:destination="@id/events" />
+            app:destination="@id/events"
+            app:popUpTo="@id/events"
+            app:popUpToInclusive="true"/>
 
     </fragment>
     <fragment
@@ -80,16 +85,37 @@
         android:label="fragment_events"
         tools:layout="@layout/fragment_events" >
         <argument
-            android:name="name"
+            android:name="message1"
             app:argType="string"
             android:defaultValue="default" />
         <argument
-            android:name="location"
+            android:name="message2"
             app:argType="string"
             android:defaultValue="default" />
         <action
+            android:id="@+id/action_events_to_contactFragment"
+            app:destination="@id/contactFragment" />
+        <action
             android:id="@+id/action_events_to_eventsList"
-            app:argType="int"
             app:destination="@id/eventsList" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/contactFragment"
+        android:name="com.latifah.techbook.ui.fragments.ContactFragment"
+        android:label="@string/Contacts"
+        tools:layout="@layout/contact_item_layout">
+        <action
+            android:id="@+id/action_contactFragment_to_contactChat"
+            app:destination="@id/contactChat" />
+    </fragment>
+    <fragment
+        android:id="@+id/contactChat"
+        android:name="com.latifah.techbook.ui.fragments.ContactChat"
+        android:label="fragment_contact_chat"
+        tools:layout="@layout/fragment_contact_chat" >
+        <action
+            android:id="@+id/action_contactChat_to_contactFragment"
+            app:destination="@id/contactFragment" />
     </fragment>
 </navigation>
