--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="4dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="103dp"
+        android:layout_height="89dp"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/profV"
+            android:layout_width="95dp"
+            android:layout_height="72dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/todo"
+            android:src="@drawable/ic_person_icon" />
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
