--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -34,10 +34,12 @@
         android:id="@+id/imageView2"
         android:layout_width="264dp"
         android:layout_height="266dp"
+        android:layout_marginTop="116dp"
         android:src="@drawable/techbooklogo"
+        app:layout_constraintBottom_toTopOf="@+id/login_button_splash"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="81dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
